--- a/prueba1/www/index.html
+++ b/prueba1/www/index.html
@@ -29,6 +29,7 @@
     <link href="lib/ionic-material/dist/ionic.material.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=RobotoDraft%3A400%2C500%2C700%2C400italic" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-resource.min.js"></script>
 
@@ -112,7 +113,7 @@
                         <!-- #3.  $root.extras -->
                         <!-- #4.  get_total() -->
                         <button ui-sref="myCart" ng-if="$root.extras" class="button button-icon button-clear ion-ios-cart-outline">
-                    {{get_total()}}
+                         {{get_total()}}
                   </button>
                     </ion-nav-buttons>
 
