--- a/prueba1/www/index.html
+++ b/prueba1/www/index.html
@@ -113,7 +113,7 @@
                         <!-- #3.  $root.extras -->
                         <!-- #4.  get_total() -->
                         <button ui-sref="myCart" ng-if="$root.extras" class="button button-icon button-clear ion-ios-cart-outline">
-                         {{get_total()}}
+                         {{totalCart}}
                   </button>
                     </ion-nav-buttons>
 
@@ -129,7 +129,7 @@
             <ion-side-menu side="left" id="side-menu21" ng-if="$root.extras">
 
                 <ion-header-bar class="expanded">
-                    <img ng-src="{{&apos;img/fk/&apos;+ user_info.photoURL +&apos;.jpg&apos;}}" class="avatar motion spin fade">
+                    <img ng-src="{{}}" class="avatar motion spin fade">
                     <div class="menu-bottom">
                         {{user_info.displayName}}
                     </div>
