--- a/prueba1/www/index.html
+++ b/prueba1/www/index.html
@@ -112,7 +112,7 @@
                     <ion-nav-buttons side="right">
                         <!-- #3.  $root.extras -->
                         <!-- #4.  get_total() -->
-                        <button ui-sref="myCart" ng-if="$root.extras" class="button button-icon button-clear ion-ios-cart-outline">
+                        <button ui-sref="shopingcart" ng-if="$root.extras" class="button button-icon button-clear ion-ios-cart-outline">
                          {{totalCart}}
                   </button>
                     </ion-nav-buttons>
@@ -146,6 +146,8 @@
                             <i class="icon ion-ios-pricetag-outline"></i>Offers</ion-item>
                         <ion-item data-componentid="list-item8" style="" menu-close="" ui-sref="myCart" id="menu-list-item8" class="item-icon-left  ">
                             <i class="icon ion-ios-cart-outline"></i>My Cart</ion-item>
+                        <ion-item data-componentid="list-item9" style="" menu-close="" ui-sref="shopingcart" id="menu-list-item9" class="item-icon-left  ">
+                            <i class="icon ion-ios-cart-outline"></i>My Cart2</ion-item>    
                         <ion-item data-componentid="list-item3" style="" menu-close="" ui-sref="lastOrders" id="menu-list-item3" class="item-icon-left  ">
                             <i class="icon ion-ios-clock-outline"></i>Orders</ion-item>
                         <ion-item data-componentid="list-item4" style="" menu-close="" ui-sref="favourite" id="menu-list-item4" class="item-icon-left  ">
