--- a/prueba1/www/index.html
+++ b/prueba1/www/index.html
@@ -86,6 +86,8 @@
         <script src="js/routes.js"></script>
         <script src="js/services.js"></script>
         <script src="js/directives.js"></script>
+        <script src="js/utils/md5.js"></script>
+        <script src="js/utils/md5.min.js"></script>
 
 
 
