--- a/prueba1/www/index.html
+++ b/prueba1/www/index.html
@@ -158,7 +158,7 @@
                                 <i class="icon ion-ios-help-outline"></i>Soporte</ion-item>
                             <ion-item ng-click="logout()" data-componentid="list-item7" style="" id="menu-list-item7" class="item-icon-left  ">
                                 <i class="icon ion-log-out"></i>Cerrar Session</ion-item>
-                                 <ion-item data-componentid="list-item6" style="" menu-close="" ui-sref="checkout2" id="menu-list-item6" class="item-icon-left  ">
+                                 <ion-item data-componentid="list-item6" style="" menu-close="" ui-sref="checkout" id="menu-list-item6" class="item-icon-left  ">
                                 <i class="icon ion-ios-help-outline"></i>checkout2</ion-item>
                         </ion-list>
                     </ion-content>
